# missing_citation_search_engine

./: .env.example  .gitignore  Dockerfile  PLAN.md  SPEC.md  config.yaml  docker-compose.yml  main.py  pdf_to_md.py  pyproject.toml  semantic_search.py  test_pdf_to_md.py
app/: __init__.py  config.py  main.py
app/db/: __init__.py  postgres.py  qdrant.py
app/ingestion/: __init__.py
app/llm/: __init__.py
app/models/: __init__.py  schemas.py
app/pipeline/: __init__.py
app/prompts/: __init__.py
app/utils/: __init__.py
tasks/: 001.md  plan_02.md
tests/: conftest.py  test_pdf_to_md.py
tests/integration/: test_stage1_infra.py
